--- a/SistemaManuscrito/.classpath
+++ b/SistemaManuscrito/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="F:/Desenvolvimento/Java/SistemaManuscrito/libs/mysql-connector-java-5.1.18-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/9936/git/sistemamanuscrito/SistemaManuscrito/libs/mysql-connector-java-5.1.18-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
